--- a/week-03/day-01/sign_up_form/index.html
+++ b/week-03/day-01/sign_up_form/index.html
@@ -20,9 +20,9 @@
     </section>
     <section class="or">OR</section>
     <section class="img">
-      <img src="./facebook.png" alt="Log in with facebook">
-      <img src="./Twitter.png" alt="Log in with Twitter">
-      <img src="./Google+.png" alt="Log in with Google+">
+      <a href="https://www.facebook.com"><img src="./facebook.png" alt="Log in with facebook"></a>
+      <a href="https://www.twitter.com"><img src="./Twitter.png" alt="Log in with Twitter"></a>
+      <a href="https://www.google.com"><img src="./Google+.png" alt="Log in with Google+"></a>
     </section>
     <section>
       <button type="submit">SIGN ME UP</button>
