a few update on sign me up form

--- a/week-03/day-01/sign_up_form/index.html
+++ b/week-03/day-01/sign_up_form/index.html
@@ -16,7 +16,7 @@
       <input type="text" id="username" name="username" placeholder="Username" required autofocus>
       <input type="email" id="email" name="email" placeholder="E-mail" required>
       <input type="password" id="password" name="password" placeholder="Password" required>
-      <input type="text" id="username" name="username" placeholder="Retype password" required>
+      <input type="password" id="password2" name="password2" placeholder="Retype password" required>
     </section>
     <section class="or">OR</section>
     <section class="img">
