--- a/week-03/day-03/content/content-2/content-2.html
+++ b/week-03/day-03/content/content-2/content-2.html
@@ -1,10 +1,17 @@
-  
-<!DOCTYPE html>
-<html lang="en">
+  <!DOCTYPE html>
+  <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <title>Workshop: innerHTML, textContent</title>
+    <style>
+      .limeGreen {
+        background-color: limegreen;
+      }
+    </style>
+
   </head>
+
   <body>
     <ul>
       <li>placeholder</li>
@@ -21,6 +28,7 @@
         - use css class to change the color instead of the style property
     </script>
     OR -->
-    <script src="./content-2.js"></script> 
+    <script src="./content-2.js"></script>
   </body>
-</html>
+
+  </html>
