--- a/week-03/day-04/countTheElements/counter.html
+++ b/week-03/day-04/countTheElements/counter.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Workshop: EventListeners</title>
+  </head>
+  <body>
+    <ul>
+      <li>apple</li>
+      <li>balloon</li>
+      <li>cat</li>
+      <li>dolphin</li>
+    </ul>
+    <button>How many items are in the list?</button>
+    <p class="result">dunno :(</p>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Workshop: EventListeners</title>
-</head>
-
-<body>
-  <ul>
-    <li>apple</li>
-    <li>balloon</li>
-    <li>cat</li>
-    <li>dolphin</li>
-  </ul>
-  <button>How many items are in the list?</button>
-  <p class="result">dunno :(</p>
-
-  <!-- You can work in the html or in a separate js file. Like:
+    <!-- You can work in the html or in a separate js file. Like:
     <script>
       On the click of the button,
       Count the items in the list
       And display the result in the result element.
     </script>
-    OR -->
-  <script src="events-2.js"></script>
-</body>
-
+    OR
+    <script src="events-2.js"></script> -->
+  <script>
+    const button = document.querySelector('button');
+    button.addEventListener('click', function(){
+      let count = document.querySelectorAll('li').length;
+      document.querySelector('.result').textContent = count;
+    })
+    
+  </script>
+  </body>
 </html>
